SourceMetaData/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Flagged__c</fullName>
        <formula>IF(Account.Flagged__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Customer flagged&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Customer is flagged?</inlineHelpText>
        <label>Contact Flagged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Correspondence_Address__c</fullName>
        <formula>Account.Current_Correspondence_Address__c</formula>
        <inlineHelpText>Contact&apos;s current correspondence address.</inlineHelpText>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBH_Department__c</fullName>
        <description>The department that LBH employee belongs to.</description>
        <inlineHelpText>The department that LBH employee belongs to.</inlineHelpText>
        <label>LBH Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBH_Division__c</fullName>
        <description>The LBH Division that the employee belongs to</description>
        <inlineHelpText>The LBH Division that the employee belongs to</inlineHelpText>
        <label>LBH Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBH_Employee_Number__c</fullName>
        <description>The unique employee number of the LBH employee.</description>
        <inlineHelpText>The unique employee number of the LBH employee.</inlineHelpText>
        <label>LBH Employee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBH_Extension__c</fullName>
        <description>The extension on which the LBH employee can be reached</description>
        <inlineHelpText>The extension on which the LBH employee can be reached</inlineHelpText>
        <label>LBH Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBH_Unit__c</fullName>
        <description>The LBH unit that the employee belongs to.</description>
        <inlineHelpText>The LBH unit that the employee belongs to.</inlineHelpText>
        <label>LBH Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Changed__c</fullName>
        <description>Date that the individuals surname changed.</description>
        <inlineHelpText>When did the person change their surname?</inlineHelpText>
        <label>Date of Name Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PhoneNumbersMerged__c</fullName>
        <description>All the phone numbers for a contact combined. Not used for page layouts but used in lookup filters</description>
        <formula>OtherPhone + &quot; , &quot; +  HomePhone + &quot; , &quot; +  MobilePhone</formula>
        <inlineHelpText>All the phone numbers for a contact combined. Not used for page layouts but used in lookup filters</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Preferred Name</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Last_Name__c</fullName>
        <description>If the person has changed their surname this field will hold their previous surname (ie maiden name)</description>
        <inlineHelpText>What is the previous surname, if the person has changed it?</inlineHelpText>
        <label>Previous Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_House_Number__c</fullName>
        <description>The house number of the contact&apos;s primary address. Set only by workflow and used</description>
        <inlineHelpText>Primary address house number</inlineHelpText>
        <label>House Number / Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Postcode__c</fullName>
        <description>The postcode of the persons primary address. Set only by workflow</description>
        <inlineHelpText>Primary address postcode</inlineHelpText>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Full_Name__c</fullName>
        <description>The Full Name of the Contact including Salutation</description>
        <formula>TEXT(Salutation) +&quot; &quot;+  FirstName + &quot; &quot;+  LastName</formula>
        <inlineHelpText>The Full Name of the Contact including Salutation</inlineHelpText>
        <label>Salutation Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user account that the contact is associated with</description>
        <inlineHelpText>The user account that the contact is associated with</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <description>The staff members primary work location</description>
        <inlineHelpText>The staff members primary work location</inlineHelpText>
        <label>Work Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Citizens</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Citizens</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>Case_00Nb0000003dtFGEAY</fullName>
        <active>true</active>
        <field>Case.REP_Customer_Representative__c</field>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Councillor, MP</value>
        </filterItems>
        <infoMessage>Use this window to select who is representing the customer in creating the goal. It defaults to listing councillors but you can look for any person record</infoMessage>
        <isOptional>true</isOptional>
        <name>Case_Customer Representative</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_Contact</fullName>
        <active>true</active>
        <field>Case.ContactId</field>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Customer,Councillor, MP</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Case_Contact Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000IeITEA0_00Nb0000003fsQwEAI</fullName>
        <active>true</active>
        <field>Representative__c.Representative__c</field>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Councillor, MP</value>
        </filterItems>
        <infoMessage>Use this window to select who is representing the customer in creating the goal. It defaults to listing councillors but you can look for any person record</infoMessage>
        <isOptional>true</isOptional>
        <name>Representative_Contact</name>
    </namedFilters>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>A contact who is not an employee of the Council</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>LBH_Employee</fullName>
        <active>true</active>
        <description>A record type corresponding to contacts who are LBH Staff</description>
        <label>LBH Employee</label>
    </recordTypes>
    <validationRules>
        <fullName>First_Name_must_be_completed</fullName>
        <active>true</active>
        <description>Contact must have a First name</description>
        <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
        <errorMessage>You must type a First Name before you can save a contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_phone_field_must_be_completed</fullName>
        <active>true</active>
        <description>Checks to see if at least one phone field is completed</description>
        <errorConditionFormula>( ISBLANK( HomePhone ) ) &amp;&amp;
( ISBLANK( MobilePhone ) ) &amp;&amp; 
( ISBLANK( OtherPhone ) )&amp;&amp;
( ISBLANK( Phone ) )</errorConditionFormula>
        <errorMessage>At least one Phone field must be completed</errorMessage>
    </validationRules>
</CustomObject>